# pacemaker

./: Makefile  docker-compose.yml  pyproject.toml
src/: heart_rate_consumer.py  heart_rate_simulator.py
