[tool.poetry]
name = "heart-rate-simulator"
version = "0.1.0"
description = ""
authors = ["Ugo <ugowerner59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.6.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
